Closed Bug 245693 Opened 21 years ago Closed 21 years ago

Unicode->EUC-KR converter loses data on encountering characters not representable in 2bytes

Categories

(Core :: Internationalization, defect)

defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: jshin1987, Assigned: jshin1987)

Details

(4 keywords, Whiteboard: fixed-aviary1.0)

Attachments

(1 file)

EUC-KR is a Korean multibyte encoding in which a character can be represented in 1byte(US-ASCII), 2bytes(characters in KS X 1001) and 8bytes(8,822 Hangul syllables not enumerated in KS X 1001). Mozilla has supported this encoding rather well, but it's recently found that Unicode->EUC-KR converter (encoder) truncates the content on coming across a character not representable by either 1 or 2bytes (that is, a character that can be only represented in 8bytes in EUC-KR). This is a serious problem (data loss) for Korean users because obviously they don't know what characters belong to KS X 1001 (representable in 1 or 2bytes) and they'd be baffaled at realizing that their emails and the content of submitted forms get truncated.
This is a trivial patch. I took this opportunity to document it better.
Comment on attachment 150112 [details] [diff] [review] patch (one liner) asking for r/sr. i'll ask for a1.7 as soon as I get r/sr.
Attachment #150112 - Flags: superreview?(bzbarsky)
Attachment #150112 - Flags: review?(smontagu)
Status: NEW → ASSIGNED
Flags: blocking1.8a2?
Flags: blocking1.7?
Keywords: dataloss
Comment on attachment 150112 [details] [diff] [review] patch (one liner) r=smontagu
Attachment #150112 - Flags: review?(smontagu) → review+
Attachment #150112 - Flags: superreview?(bzbarsky) → superreview+
Comment on attachment 150112 [details] [diff] [review] patch (one liner) asking for 1.7a The risk is very low and the patch is a trivial one-liner. However, it fixes a serious bug affecting a lot of Korean users.
Attachment #150112 - Flags: approval1.7?
forgot to note that it's fixed on the trunk. thanks for quick r/sr. I'm keeping this open until i get it fixed on 1.7branch and aviary-1.0
Comment on attachment 150112 [details] [diff] [review] patch (one liner) a=sspitzer for 1.7 for aviary, you should email mscott directly
Attachment #150112 - Flags: approval1.7? → approval1.7+
Whiteboard: needed-aviary1.0
Whiteboard: needed-aviary1.0 → fixed-aviary1.0
thanks. it's also fixed on 1.7 branch
Keywords: fixed1.7
Whiteboard: fixed-aviary1.0 → fixed-aviary1.0,fixed-1.7
Whiteboard: fixed-aviary1.0,fixed-1.7 → fixed-aviary1.0
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Flags: blocking1.8a2?
Flags: blocking1.7?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: