bug 245693 : Unicode->EUC-KR converter loses data on coming across characters not representable in 2bytes (r=smontagu, sr=dbaron)